change process auto build

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -123,6 +123,23 @@
   --figma-font-line-height-8: 72;
   --figma-font-line-height-9: 60;
   --figma-font-line-height-10: 44;
+  --figma-size-4: 4px;
+  --figma-size-8: 8px;
+  --figma-size-12: 12px;
+  --figma-size-16: 16px;
+  --figma-size-20: 20px;
+  --figma-size-24: 24px;
+  --figma-size-32: 32px;
+  --figma-size-40: 40px;
+  --figma-size-48: 48px;
+  --figma-size-64: 64px;
+  --figma-size-80: 80px;
+  --figma-size-96: 96px;
+  --figma-size-128: 128px;
+  --figma-size-160: 160px;
+  --figma-size-192: 192px;
+  --figma-size-224: 224px;
+  --figma-size-256: 256px;
   --figma-size-font-heading-1: 30px;
   --figma-size-font-heading-2: 24px;
   --figma-size-font-heading-3: 20px;
@@ -210,4 +227,139 @@
   --figma-color-border-disable: #98a2b3;
   --figma-color-border-button-link: #b2ddff;
   --figma-color-border-button-error: #f04438;
+  --figma-palette-link-25: #F5FAFF;
+  --figma-palette-link-50: #EFF8FF;
+  --figma-palette-link-100: #D1E9FF;
+  --figma-palette-link-200: #B2DDFF;
+  --figma-palette-link-300: #84CAFF;
+  --figma-palette-link-400: #53B1FD;
+  --figma-palette-link-500: #2E90FA;
+  --figma-palette-link-600: #1570EF;
+  --figma-palette-link-700: #175CD3;
+  --figma-palette-link-800: #1849A9;
+  --figma-palette-link-900: #194185;
+  --figma-palette-success-25: #F6FEF9;
+  --figma-palette-success-50: #ECFDF3;
+  --figma-palette-success-100: #D1FADF;
+  --figma-palette-success-200: #A6F4C5;
+  --figma-palette-success-300: #6CE9A6;
+  --figma-palette-success-400: #32D583;
+  --figma-palette-success-500: #12B76A;
+  --figma-palette-success-600: #039855;
+  --figma-palette-success-700: #027A48;
+  --figma-palette-success-800: #05603A;
+  --figma-palette-success-900: #054F31;
+  --figma-palette-warning-25: #FFFCF5;
+  --figma-palette-warning-50: #FFFAEB;
+  --figma-palette-warning-100: #FEF0C7;
+  --figma-palette-warning-200: #FEDF89;
+  --figma-palette-warning-300: #FEC84B;
+  --figma-palette-warning-400: #FDB022;
+  --figma-palette-warning-500: #F79009;
+  --figma-palette-warning-600: #DC6803;
+  --figma-palette-warning-700: #B54708;
+  --figma-palette-warning-800: #93370D;
+  --figma-palette-warning-900: #7A2E0E;
+  --figma-palette-error-25: #FFFBFA;
+  --figma-palette-error-50: #FEF3F2;
+  --figma-palette-error-100: #FEE4E2;
+  --figma-palette-error-200: #FECDCA;
+  --figma-palette-error-300: #FDA29B;
+  --figma-palette-error-400: #F97066;
+  --figma-palette-error-500: #F04438;
+  --figma-palette-error-600: #D92D20;
+  --figma-palette-error-700: #B42318;
+  --figma-palette-error-800: #912018;
+  --figma-palette-error-900: #7A271A;
+  --figma-palette-primary-25: #FFFCF2;
+  --figma-palette-primary-50: #FEF8DD;
+  --figma-palette-primary-100: #FEF5CB;
+  --figma-palette-primary-200: #FFEB74;
+  --figma-palette-primary-300: #FFDD00;
+  --figma-palette-primary-400: #F9CA02;
+  --figma-palette-primary-500: #F2B705;
+  --figma-palette-primary-600: #F0B305;
+  --figma-palette-primary-700: #E9A405;
+  --figma-palette-primary-800: #E29606;
+  --figma-palette-primary-900: #D17407;
+  --figma-palette-gray-25: #FCFCFD;
+  --figma-palette-gray-50: #F9FAFB;
+  --figma-palette-gray-100: #F2F4F7;
+  --figma-palette-gray-200: #EAECF0;
+  --figma-palette-gray-300: #D0D5DD;
+  --figma-palette-gray-400: #98A2B3;
+  --figma-palette-gray-500: #667085;
+  --figma-palette-gray-600: #475467;
+  --figma-palette-gray-700: #344054;
+  --figma-palette-gray-800: #1D2939;
+  --figma-palette-gray-900: #101828;
+  --figma-shadow-3xl: [object Object];
+  --figma-shadow-2xl: [object Object];
+  --figma-shadow-xl: [object Object],[object Object];
+  --figma-shadow-lg: [object Object],[object Object];
+  --figma-shadow-md: [object Object],[object Object];
+  --figma-shadow-sm: [object Object],[object Object];
+  --figma-shadow-xs: [object Object];
+  --figma-focused: [object Object],[object Object];
+  --figma-font-families-inter: -apple-system, BlinkMacSystemFont, 'Segoe UI', Inter, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --figma-line-heights-0: 38;
+  --figma-line-heights-1: 32;
+  --figma-line-heights-2: 30;
+  --figma-line-heights-3: 28;
+  --figma-line-heights-4: 24;
+  --figma-line-heights-5: 20;
+  --figma-line-heights-6: 18;
+  --figma-line-heights-7: 90;
+  --figma-line-heights-8: 72;
+  --figma-line-heights-9: 60;
+  --figma-line-heights-10: 44;
+  --figma-font-weights-semibold: 600;
+  --figma-font-weights-medium: 500;
+  --figma-font-weights-bold: 700;
+  --figma-font-weights-regular: 400;
+  --figma-font-size-0: 12;
+  --figma-font-size-1: 14;
+  --figma-font-size-2: 16;
+  --figma-font-size-3: 18;
+  --figma-font-size-4: 20;
+  --figma-font-size-5: 24;
+  --figma-font-size-6: 30;
+  --figma-font-size-7: 36;
+  --figma-font-size-8: 48;
+  --figma-font-size-9: 60;
+  --figma-font-size-10: 72;
+  --figma-letter-spacing-0: 0%;
+  --figma-letter-spacing-1: -2%;
+  --figma-paragraph-spacing-0: 12;
+  --figma-paragraph-spacing-1: 14;
+  --figma-paragraph-spacing-2: 16;
+  --figma-paragraph-spacing-3: 18;
+  --figma-paragraph-spacing-4: 20;
+  --figma-paragraph-spacing-5: 24;
+  --figma-paragraph-spacing-6: 30;
+  --figma-paragraph-spacing-7: 36;
+  --figma-paragraph-spacing-8: 48;
+  --figma-paragraph-spacing-9: 60;
+  --figma-paragraph-spacing-10: 72;
+  --figma-text-case-none: none;
+  --figma-text-decoration-none: none;
+  --figma-corner-none: 0;
+  --figma-corner-extra-small: 4;
+  --figma-corner-small: 8;
+  --figma-corner-medium: 12;
+  --figma-corner-large: 16;
+  --figma-corner-extra-large: 28;
+  --figma-corner-full: 100;
+  --figma-width-1: 1;
+  --figma-width-2: 2;
+  --figma-space-1: 4;
+  --figma-space-2: 8;
+  --figma-space-3: 12;
+  --figma-space-4: 16;
+  --figma-space-5: 20;
+  --figma-space-6: 24;
+  --figma-space-7: 32;
+  --figma-space-8: 40;
+  --figma-space-9: 48;
+  --figma-space-10: 64;
 }
