chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -194,15 +194,17 @@
   --figma-size-line-height-label: 18px;
   --figma-size-line-height-caption: 18px;
   --figma-color-text-normal: #344054;
+  --figma-color-text-gray: #667085;
   --figma-color-text-white: #fcfcfd;
+  --figma-color-text-success: #12b76a;
+  --figma-color-text-warning: #f79009;
+  --figma-color-text-error: #f04438;
   --figma-color-text-link: #2e90fa;
-  --figma-color-text-success: #027a48;
-  --figma-color-text-error: #b42318;
   --figma-color-text-button-primary: #344054;
   --figma-color-text-button-secondary: #175cd3;
   --figma-color-text-sidebar: #344054;
   --figma-color-text-disable: #98a2b3;
-  --figma-color-background-primary: #ffdd00;
+  --figma-color-background-primary-container: #ffeb74;
   --figma-color-background-base-light: #fcfcfd;
   --figma-color-background-base-grey: #f2f4f7;
   --figma-color-background-base-dark: #101828;
@@ -213,6 +215,21 @@
   --figma-color-background-button-primary-active: #ffdd00;
   --figma-color-background-button-primary-hover: #ffeb74;
   --figma-color-background-button-primary-selected: #f2b705;
+  --figma-color-background-button-success-active: #6ce9a6;
+  --figma-color-background-button-success-hover: #a6f4c5;
+  --figma-color-background-button-success-selected: #12b76a;
+  --figma-color-background-button-warning-active: #fec84b;
+  --figma-color-background-button-warning-hover: #fedf89;
+  --figma-color-background-button-warning-selected: #f79009;
+  --figma-color-background-button-info-active: #84caff;
+  --figma-color-background-button-info-hover: #b2ddff;
+  --figma-color-background-button-info-selected: #2e90fa;
+  --figma-color-background-button-light-active: #fcfcfd;
+  --figma-color-background-button-light-hover: #f2f4f7;
+  --figma-color-background-button-light-selected: #d0d5dd;
+  --figma-color-background-button-dark-active: #101828;
+  --figma-color-background-button-dark-hover: #344054;
+  --figma-color-background-button-dark-selected: #1d2939;
   --figma-color-background-button-error-active: #f04438;
   --figma-color-background-button-error-hover: #fda29b;
   --figma-color-background-button-error-selected: #d92d20;
