--- a/carousel/src/carousel.css
+++ b/carousel/src/carousel.css
@@ -27,6 +27,11 @@
   backface-visibility: hidden;
   transition: transform 0.6s ease-in-out;
 }
+
+.carousel-item img {
+  max-width: 100%;
+  height: auto;
+}
 @media (prefers-reduced-motion: reduce) {
   .carousel-item {
     transition: none;
@@ -75,6 +80,7 @@
 
 .carousel-control-prev,
 .carousel-control-next {
+  width: 80px;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -82,7 +88,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15%;
   padding: 0;
   color: #101828;
   text-align: center;
