--- a/checks-radios/src/form-check.css
+++ b/checks-radios/src/form-check.css
@@ -18,7 +18,7 @@ Checkbox
 
 .checkmark {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   height: 16px;
   width: 16px;
@@ -41,7 +41,7 @@ input[type='checkbox'][disabled] label.checkbox {
   color: var(--figma-color-text-disable);
 }
 .checkbox {
-  display: block;
+  /* display: block; */
   position: relative;
   padding-left: 26px;
   padding-top: 1px;
