--- a/typography/src/typo.css
+++ b/typography/src/typo.css
@@ -183,3 +183,19 @@ a,
 .text-end {
   text-align: right !important;
 }
+
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
