--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -204,6 +204,7 @@
   --figma-color-text-button-secondary: #175cd3;
   --figma-color-text-sidebar: #344054;
   --figma-color-text-disable: #98a2b3;
+  --figma-color-background-primary: #ffdd00;
   --figma-color-background-primary-container: #ffeb74;
   --figma-color-background-base-light: #fcfcfd;
   --figma-color-background-base-grey: #f2f4f7;
@@ -211,6 +212,7 @@
   --figma-color-background-error: #fee4e2;
   --figma-color-background-link: #d1e9ff;
   --figma-color-background-success: #d1fadf;
+  --figma-color-background-warning: #fef0c7;
   --figma-color-background-disable: #f2f4f7;
   --figma-color-background-button-primary-active: #ffdd00;
   --figma-color-background-button-primary-hover: #ffeb74;
