fixing carousel responsive size

--- a/tokens/src/styles.css
+++ b/tokens/src/styles.css
@@ -81,7 +81,7 @@ body {
 .text-black {
   color: var(--figma-color-text-normal);
 }
-.text-muted {
+.text-disabled {
   color: var(--figma-color-text-disable);
 }
 .d-inline {
