--- a/carousel/src/carousel.css
+++ b/carousel/src/carousel.css
@@ -1,5 +1,6 @@
 .carousel {
   position: relative;
+  height: inherit;
 }
 
 .carousel.pointer-event {
@@ -9,8 +10,12 @@
 .carousel-inner {
   position: relative;
   width: 100%;
+  height: 100%;
   overflow: hidden;
+  border-radius: 24px;
+  background: var(--figma-color-background-base-grey);
 }
+
 .carousel-inner::after {
   display: block;
   clear: both;
@@ -31,6 +36,7 @@
 .carousel-item img {
   max-width: 100%;
   height: auto;
+  margin: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-item {
@@ -80,7 +86,7 @@
 
 .carousel-control-prev,
 .carousel-control-next {
-  width: 80px;
+  width: 5rem;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -89,7 +95,7 @@
   align-items: center;
   justify-content: center;
   padding: 0;
-  color: #101828;
+  color: var(--figma-color-text-normal);
   text-align: center;
   background: none;
   border: 0;
@@ -98,25 +104,18 @@
 }
 .carousel-control-prev span,
 .carousel-control-next span {
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: 5rem;
   background: rgba(252, 252, 253, 0.5);
   box-shadow: 0px 4px 8px -2px rgb(16 24 40 / 10%),
     0px 2px 4px -2px rgb(16 24 40 / 6%);
   border-radius: 100px;
   align-items: center;
-  padding-top: 34px;
+  padding-top: 2.125rem;
 }
 .carousel-control-prev span:hover,
 .carousel-control-next span:hover {
-  width: 80px;
-  height: 80px;
-  background: #b2ddff;
-  box-shadow: 0px 4px 8px -2px rgb(16 24 40 / 10%),
-    0px 2px 4px -2px rgb(16 24 40 / 6%);
-  border-radius: 100px;
-  align-items: center;
-  padding-top: 34px;
+  background: var(--figma-color-background-button-info-hover);
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-control-prev,
@@ -134,11 +133,11 @@
   opacity: 0.9;
 }
 .carousel-control-prev {
-  left: 0;
+  left: 8px;
 }
 
 .carousel-control-next {
-  right: 0;
+  right: 8px;
 }
 
 .carousel-control-prev-icon,
@@ -184,7 +183,7 @@
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #fff;
+  /* background-color: #fff; */
   background-clip: padding-box;
   border: 0;
   border-radius: 50%;
@@ -194,6 +193,8 @@
 
 .carousel-indicators button {
   background-color: #fcfcfd;
+  filter: drop-shadow(0px 1px 3px rgba(16, 24, 40, 0.1))
+    drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.06));
 }
 
 @media (prefers-reduced-motion: reduce) {
