--- a/table/src/table.css
+++ b/table/src/table.css
@@ -1,6 +1,7 @@
 table {
   caption-side: bottom;
   border-collapse: collapse;
+  border-radius: 1em;
 }
 
 .table {
@@ -10,10 +11,22 @@ table {
   vertical-align: top;
   border-color: var(--figma-color-border-base);
 }
+.table tr:first-child th:first-child {
+  border-top-left-radius: 8px;
+}
+.table tr:first-child th:last-child {
+  border-top-right-radius: 8px;
+}
+.table tr:last-child td:first-child {
+  border-bottom-left-radius: 8px;
+}
+.table tr:last-child td:last-child {
+  border-bottom-right-radius: 8px;
+}
 
 .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
-  background-color: var(--bs-table-bg);
+  background-color: transparent;
   border-bottom-width: 1px;
   /* box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg); */
 }
@@ -78,6 +91,7 @@ tr {
   border-color: inherit;
   border-style: solid;
   border-width: 0;
+  vertical-align: middle !important;
 }
 
 table.table thead .sorting,
@@ -103,7 +117,7 @@ table.table thead .sorting_asc:before,
 table.table thead .sorting_asc_disabled:before,
 table.table thead .sorting_desc:before,
 table.table thead .sorting_desc_disabled:before {
-  right: 1em;
+  right: 0.5em;
   content: '\f0de';
   font-family: 'Font Awesome\ 6 Free';
   font-weight: 900;
@@ -115,10 +129,11 @@ table.table thead .sorting_asc:after,
 table.table thead .sorting_asc_disabled:after,
 table.table thead .sorting_desc:after,
 table.table thead .sorting_desc_disabled:after {
+  right: 0.5em;
   content: '\f0dd';
   font-family: 'Font Awesome\ 6 Free';
   font-weight: 900;
-  right: 16px;
+
   font-size: 1rem;
 }
 
