chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -381,4 +381,5 @@
   --figma-space-8: 40;
   --figma-space-9: 48;
   --figma-space-10: 64;
+  --figma-logo: https://www.adira.co.id/frontend/assets/img/logo.png;
 }
