--- a/tags/src/tags.css
+++ b/tags/src/tags.css
@@ -1,6 +1,9 @@
 a.tags {
   text-decoration: none;
 }
+a.tags:not([href]) {
+  pointer-events: none;
+}
 
 .tags {
   display: flex;
@@ -40,6 +43,6 @@ a.tags {
 }
 
 a.tags:hover {
-  filter: brightness(85%);
+  filter: brightness(105%);
   cursor: pointer;
 }
