--- a/button/src/button.css
+++ b/button/src/button.css
@@ -9,14 +9,14 @@ button:not(:disabled) {
 }
 
 .btn {
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: var(--figma-size-button-padding-top-bottom)
     var(--figma-size-button-padding-right-left);
-  gap: var(--figma-size-button-gap);
-  height: 40px;
+  /* gap: var(--figma-size-button-gap); */
+  /* height: 40px; */
   border-radius: var(--figma-size-button-radius);
   border: none;
 
@@ -25,6 +25,11 @@ button:not(:disabled) {
   font-weight: var(--figma-font-button1-font-weight);
   font-size: var(--figma-size-font-button-1);
   line-height: var(--figma-size-line-height-button1);
+}
+
+.btn:has(i) {
+  display: flex;
+  gap: 8px;
 }
 
 .btn[disabled] {
