--- a/navs-tabs/src/nav.css
+++ b/navs-tabs/src/nav.css
@@ -1,4 +1,10 @@
 .nav {
+  /* --bs-nav-link-padding-x: 1rem;
+  --bs-nav-link-padding-y: 0.5rem;
+  --bs-nav-link-font-weight: ;
+  --bs-nav-link-color: var(--bs-link-color);
+  --bs-nav-link-hover-color: var(--bs-link-hover-color);
+  --bs-nav-link-disabled-color: var(--bs-secondary-color); */
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
@@ -12,12 +18,36 @@
 }
 .nav-link {
   display: block;
+  /* padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x); */
   padding: 0.5rem 1rem;
+  /* font-size: var(--bs-nav-link-font-size); */
+  /* font-weight: var(--bs-nav-link-font-weight); */
+  /* color: var(--bs-nav-link-color); */
   color: var(--figma-color-text-normal) !important;
   text-decoration: none !important;
+  background: none;
   border-radius: 8px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+  .nav-link {
+    transition: none;
+  }
+}
+.nav-link:hover,
+.nav-link:focus {
+  /* color: var(--bs-nav-link-hover-color); */
+}
+.nav-link:focus-visible {
+  outline: 0;
+  /* box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); */
+}
+.nav-link.disabled,
+.nav-link:disabled {
+  /* color: var(--bs-nav-link-disabled-color); */
+  pointer-events: none;
+  cursor: default;
 }
 
 .nav-link-icon {
@@ -30,14 +60,6 @@
   border-radius: 8px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
-}
-.nav-pills.nav-icon .nav-item .nav-link.active {
-  color: #ffffff !important;
-}
-.nav-pills.nav-icon .nav-item .nav-link.disabled {
-  color: var(--figma-color-text-disable) !important;
-}
-.nav-border {
 }
 
 .nav-border.active {
@@ -75,6 +97,110 @@
   pointer-events: none;
   cursor: default;
 }
+
+.nav-tabs {
+  /* --bs-nav-tabs-border-width: var(--bs-border-width);
+  --bs-nav-tabs-border-color: var(--bs-border-color);
+  --bs-nav-tabs-border-radius: var(--bs-border-radius);
+  --bs-nav-tabs-link-hover-border-color: var(--bs-secondary-bg) var(--bs-secondary-bg) var(--bs-border-color);
+  --bs-nav-tabs-link-active-color: var(--bs-emphasis-color);
+  --bs-nav-tabs-link-active-bg: var(--bs-body-bg);
+  --bs-nav-tabs-link-active-border-color: var(--bs-border-color) var(--bs-border-color) var(--bs-body-bg); */
+  /* border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color); */
+}
+.nav-tabs .nav-link {
+  /* margin-bottom: calc(-1 * var(--bs-nav-tabs-border-width)); */
+  /* border: var(--bs-nav-tabs-border-width) solid transparent; */
+  /* border-top-left-radius: var(--bs-nav-tabs-border-radius); */
+  /* border-top-right-radius: var(--bs-nav-tabs-border-radius); */
+}
+.nav-tabs .nav-link:hover,
+.nav-tabs .nav-link:focus {
+  isolation: isolate;
+  /* border-color: var(--bs-nav-tabs-link-hover-border-color); */
+}
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  /* color: var(--bs-nav-tabs-link-active-color);
+  background-color: var(--bs-nav-tabs-link-active-bg);
+  border-color: var(--bs-nav-tabs-link-active-border-color); */
+}
+.nav-tabs .dropdown-menu {
+  /* margin-top: calc(-1 * var(--bs-nav-tabs-border-width)); */
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.nav-pills {
+  /* --bs-nav-pills-border-radius: var(--bs-border-radius);
+  --bs-nav-pills-link-active-color: #fff;
+  --bs-nav-pills-link-active-bg: #0d6efd; */
+}
+.nav-pills .nav-link {
+  /* border-radius: var(--bs-nav-pills-border-radius); */
+}
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  /* color: var(--bs-nav-pills-link-active-color);
+  background-color: var(--bs-nav-pills-link-active-bg); */
+}
+
+.nav-pills.nav-icon .nav-item .nav-link.active {
+  color: #ffffff !important;
+}
+.nav-pills.nav-icon .nav-item .nav-link.disabled {
+  /* color: var(--figma-color-text-disable) !important; */
+}
+.nav-border {
+}
+
+.nav-underline {
+  /* --bs-nav-underline-gap: 1rem;
+  --bs-nav-underline-border-width: 0.125rem;
+  --bs-nav-underline-link-active-color: var(--bs-emphasis-color);
+  gap: var(--bs-nav-underline-gap); */
+}
+.nav-underline .nav-link {
+  padding-right: 0;
+  padding-left: 0;
+  /* border-bottom: var(--bs-nav-underline-border-width) solid transparent; */
+}
+.nav-underline .nav-link:hover,
+.nav-underline .nav-link:focus {
+  border-bottom-color: currentcolor;
+}
+.nav-underline .nav-link.active,
+.nav-underline .show > .nav-link {
+  font-weight: 700;
+  /* color: var(--bs-nav-underline-link-active-color); */
+  border-bottom-color: currentcolor;
+}
+
+.nav-fill > .nav-link,
+.nav-fill .nav-item {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.nav-justified > .nav-link,
+.nav-justified .nav-item {
+  flex-basis: 0;
+  flex-grow: 1;
+  text-align: center;
+}
+
+.nav-fill .nav-item .nav-link,
+.nav-justified .nav-item .nav-link {
+  width: 100%;
+}
+
+.tab-content > .tab-pane {
+  display: none;
+}
+.tab-content > .active {
+  display: block;
+}
+
 .nav-icon .nav-item .nav-link.active,
 .nav-icon.nav-border .nav-item .nav-link.active {
   display: flex;
