--- a/typography/src/typo.css
+++ b/typography/src/typo.css
@@ -1,6 +1,46 @@
+hr {
+  margin: 1rem 0;
+  color: inherit;
+  border: 0;
+  border-top: 1px solid;
+  /* border-top: var(--bs-border-width) solid; */
+  opacity: 0.25;
+}
+
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
 h1,
 .h1 {
-  font-family: var(--figma-font-h1-font-family);
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  /* font-weight: 500; */
+  font-weight: inherit;
+  line-height: 1.2;
+  /* color: var(--bs-heading-color); */
+  color: inherit;
+}
+
+h1,
+.h1 {
+  /* font-size: calc(1.375rem + 1.5vw); */
+  font-size: var(--figma-size-font-heading-1);
+}
+/* @media (min-width: 1200px) {
+  h1,
+  .h1 {
+    font-size: 2.5rem;
+  }
+} */
+
+/* font-family: var(--figma-font-h1-font-family);
   font-style: normal;
   font-weight: var(--figma-font-h1-font-weight);
   line-height: var(--figma-size-line-height-h1);
@@ -8,9 +48,20 @@ h1,
   letter-spacing: var(--figma-font-h1-letter-spacing);
   word-spacing: var(--figma-font-h1-paragraph-spacing);
   text-transform: var(--figma-font-h1-text-case);
-  text-decoration: var(--figma-font-h1-text-decoration);
-}
+  text-decoration: var(--figma-font-h1-text-decoration); */
+
 h2,
+.h2 {
+  /* font-size: calc(1.325rem + 0.9vw); */
+  font-size: var(--figma-size-font-heading-2);
+}
+/* @media (min-width: 1200px) {
+    h2, .h2 {
+      font-size: 2rem;
+    }
+  } */
+
+/* h2,
 .h2 {
   font-family: var(--figma-font-h2-font-family);
   font-style: normal;
@@ -21,9 +72,20 @@ h2,
   word-spacing: var(--figma-font-h2-paragraph-spacing);
   text-transform: var(--figma-font-h2-text-case);
   text-decoration: var(--figma-font-h2-text-decoration);
-}
+} */
 
 h3,
+.h3 {
+  font-size: var(--figma-size-font-heading-3);
+  /* font-size: calc(1.3rem + 0.6vw); */
+}
+/* @media (min-width: 1200px) {
+  h3, .h3 {
+    font-size: 1.75rem;
+  }
+} */
+
+/* h3,
 .h3 {
   font-family: var(--figma-font-h3-font-family);
   font-style: normal;
@@ -34,9 +96,20 @@ h3,
   word-spacing: var(--figma-font-h3-paragraph-spacing);
   text-transform: var(--figma-font-h3-text-case);
   text-decoration: var(--figma-font-h3-text-decoration);
-}
+} */
 
 h4,
+.h4 {
+  font-size: var(--figma-size-font-heading-4);
+  /* font-size: calc(1.275rem + 0.3vw); */
+}
+/* @media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.5rem;
+  }
+} */
+
+/* h4,
 .h4 {
   font-family: var(--figma-font-h4-font-family);
   font-style: normal;
@@ -47,9 +120,15 @@ h4,
   word-spacing: var(--figma-font-h4-paragraph-spacing);
   text-transform: var(--figma-font-h4-text-case);
   text-decoration: var(--figma-font-h4-text-decoration);
-}
+} */
 
 h5,
+.h5 {
+  /* font-size: 1.25rem; */
+  font-size: var(--figma-size-font-heading-5);
+}
+
+/* h5,
 .h5 {
   font-family: var(--figma-font-h5-font-family);
   font-style: normal;
@@ -60,9 +139,15 @@ h5,
   word-spacing: var(--figma-font-h5-paragraph-spacing);
   text-transform: var(--figma-font-h5-text-case);
   text-decoration: var(--figma-font-h5-text-decoration);
-}
+} */
 
 h6,
+.h6 {
+  /* font-size: 1rem; */
+  font-size: var(--figma-size-font-heading-6);
+}
+
+/* h6,
 .h6 {
   font-family: var(--figma-font-h6-font-family);
   font-style: normal;
@@ -73,6 +158,44 @@ h6,
   word-spacing: var(--figma-font-h6-paragraph-spacing);
   text-transform: var(--figma-font-h6-text-case);
   text-decoration: var(--figma-font-h6-text-decoration);
+} */
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+a,
+.a {
+  text-decoration: none;
+
+  font-family: var(--figma-font-family-sans);
+  font-style: normal;
+  font-weight: var(--figma-font-button2-font-weight);
+  font-size: var(--figma-size-font-button-2);
+  line-height: var(--figma-size-line-height-button2);
+
+  color: var(--figma-color-text-link);
+}
+
+a:hover {
+  /* --bs-link-color-rgb: var(--bs-link-hover-color-rgb); */
+  /* Belum di set */
+}
+
+a:not([href]):not([class]),
+a:not([href]):not([class]):hover {
+  /* color: inherit;
+  text-decoration: none; */
+  /* Belum di set */
+}
+
+caption {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  /* color: var(--bs-secondary-color); */
+  color: var(--figma-color-text-gray);
+  text-align: left;
 }
 
 .body1 {
@@ -143,6 +266,7 @@ h6,
 }
 .label,
 label {
+  display: inline-block;
   font-family: var(--figma-font-label-font-family);
   font-style: normal;
   font-weight: var(--figma-font-label-font-weight);
@@ -163,18 +287,6 @@ label {
   word-spacing: var(--figma-font-caption-paragraph-spacing);
   text-transform: var(--figma-font-caption-text-case);
   text-decoration: var(--figma-font-caption-text-decoration);
-}
-a,
-.a {
-  text-decoration: none;
-
-  font-family: var(--figma-font-family-sans);
-  font-style: normal;
-  font-weight: var(--figma-font-button2-font-weight);
-  font-size: var(--figma-size-font-button-2);
-  line-height: var(--figma-size-line-height-button2);
-
-  color: var(--figma-color-text-link);
 }
 
 .text-center {
@@ -198,4 +310,75 @@ h1,
 .h1 {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+}
+
+.lead {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+.display-1 {
+  font-size: calc(1.625rem + 4.5vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-1 {
+    font-size: 5rem;
+  }
+}
+
+.display-2 {
+  font-size: calc(1.575rem + 3.9vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-2 {
+    font-size: 4.5rem;
+  }
+}
+
+.display-3 {
+  font-size: calc(1.525rem + 3.3vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-3 {
+    font-size: 4rem;
+  }
+}
+
+.display-4 {
+  font-size: calc(1.475rem + 2.7vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-4 {
+    font-size: 3.5rem;
+  }
+}
+
+.display-5 {
+  font-size: calc(1.425rem + 2.1vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-5 {
+    font-size: 3rem;
+  }
+}
+
+.display-6 {
+  font-size: calc(1.375rem + 1.5vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-6 {
+    font-size: 2.5rem;
+  }
 }
