--- a/accordion/src/accordion.css
+++ b/accordion/src/accordion.css
@@ -103,6 +103,24 @@
 .accordion-item:not(:first-of-type) {
   border-top: 0;
 }
+.accordion-item:last-of-type {
+  border-bottom-right-radius: var(--ad-accordion-border-radius);
+  border-bottom-left-radius: var(--ad-accordion-border-radius);
+  /* border-bottom-right-radius: var(--bs-accordion-border-radius);
+  border-bottom-left-radius: var(--bs-accordion-border-radius); */
+}
+.accordion-item:last-of-type .accordion-button.collapsed {
+  border-bottom-right-radius: var(--ad-accordion-inner-border-radius);
+  border-bottom-left-radius: var(--ad-accordion-inner-border-radius);
+  /* border-bottom-right-radius: var(--bs-accordion-inner-border-radius);
+  border-bottom-left-radius: var(--bs-accordion-inner-border-radius); */
+}
+.accordion-item:last-of-type .accordion-collapse {
+  border-bottom-right-radius: var(--ad-accordion-border-radius);
+  border-bottom-left-radius: var(--ad-accordion-border-radius);
+  /* border-bottom-right-radius: var(--bs-accordion-border-radius);
+  border-bottom-left-radius: var(--bs-accordion-border-radius); */
+}
 .accordion-item {
   border-bottom-right-radius: var(--ad-accordion-border-radius);
   border-bottom-left-radius: var(--ad-accordion-border-radius);
@@ -138,6 +156,11 @@
 .accordion-flush .accordion-item .accordion-button.collapsed {
   border-radius: 0;
 }
+
+/* [data-bs-theme=dark] .accordion-button::after {
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%236ea8fe'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%236ea8fe'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+} */
 
 .fade {
   transition: opacity 0.15s linear;
