--- a/breadcrumb/src/breadcrumb.css
+++ b/breadcrumb/src/breadcrumb.css
@@ -1,10 +1,20 @@
 .breadcrumb {
+  /* --bs-breadcrumb-padding-x: 0;
+  --bs-breadcrumb-padding-y: 0;
+  --bs-breadcrumb-margin-bottom: 1rem;
+  --bs-breadcrumb-bg: ;
+  --bs-breadcrumb-border-radius: ;
+  --bs-breadcrumb-divider-color: var(--bs-secondary-color);
+  --bs-breadcrumb-item-padding-x: 0.5rem;
+  --bs-breadcrumb-item-active-color: var(--bs-secondary-color); */
   display: flex;
   flex-wrap: wrap;
   padding: 0 0 !important;
   margin-bottom: 1rem;
-  list-style: none !important;
   font-size: var(--figma-size-font-caption) !important;
+  list-style: none !important;
+  /* background-color: var(--bs-breadcrumb-bg); */
+  /* border-radius: var(--bs-breadcrumb-border-radius); */
 }
 .breadcrumb-item a {
   color: #98a2b3 !important;
