chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -176,6 +176,37 @@
   --figma-size-line-height-button2: 20px;
   --figma-size-line-height-label: 18px;
   --figma-size-line-height-caption: 18px;
+  --figma-font-families-inter: Inter;
+  --figma-line-heights-0: 38;
+  --figma-line-heights-1: 32;
+  --figma-line-heights-2: 30;
+  --figma-line-heights-3: 28;
+  --figma-line-heights-4: 24;
+  --figma-line-heights-5: 20;
+  --figma-line-heights-6: 18;
+  --figma-font-weights-inter-0: Semi Bold;
+  --figma-font-weights-inter-1: Medium;
+  --figma-font-weights-inter-2: Bold;
+  --figma-font-weights-inter-3: Regular;
+  --figma-font-size-0: 12;
+  --figma-font-size-1: 14;
+  --figma-font-size-2: 16;
+  --figma-font-size-3: 18;
+  --figma-font-size-4: 20;
+  --figma-font-size-5: 24;
+  --figma-font-size-6: 30;
+  --figma-letter-spacing-0: 0%;
+  --figma-paragraph-spacing-0: 12;
+  --figma-paragraph-spacing-1: 14;
+  --figma-paragraph-spacing-2: 16;
+  --figma-paragraph-spacing-3: 18;
+  --figma-paragraph-spacing-4: 20;
+  --figma-paragraph-spacing-5: 24;
+  --figma-paragraph-spacing-6: 30;
+  --figma-text-case-none: none;
+  --figma-text-case-capitalize: capitalize;
+  --figma-text-decoration-none: none;
+  --figma-paragraph-indent-0: 0px;
   --figma-color-text-normal: #344054;
   --figma-color-text-sidebar: #344054;
   --figma-color-text-gray: #667085;
@@ -193,6 +224,7 @@
   --figma-color-background-base-light: #fcfcfd;
   --figma-color-background-base-grey: #f2f4f7;
   --figma-color-background-base-dark: #101828;
+  --figma-color-background-base-skyblue: #f5faff;
   --figma-color-background-error: #fee4e2;
   --figma-color-background-link: #d1e9ff;
   --figma-color-background-success: #d1fadf;
@@ -222,6 +254,7 @@
   --figma-color-background-button-secondary-active: #fcfcfd;
   --figma-color-background-button-secondary-hover: #f5faff;
   --figma-color-background-button-secondary-selected: #d1e9ff;
+  --figma-color-background-variant-complementary: #194185;
   --figma-color-shadow: #101828;
   --figma-color-border-base: #98a2b3;
   --figma-color-border-error: #f97066;
