--- a/tokens/scss/_variables.scss
+++ b/tokens/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 19 Sep 2023 08:11:37 GMT
+// Generated on Thu, 05 Oct 2023 09:15:08 GMT
 
 $font-h1-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Inter, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $font-h1-font-weight: 600;
@@ -175,6 +175,37 @@ $size-line-height-button1: 24rem;
 $size-line-height-button2: 20rem;
 $size-line-height-label: 18rem;
 $size-line-height-caption: 18rem;
+$font-families-inter: Inter;
+$line-heights-0: 38;
+$line-heights-1: 32;
+$line-heights-2: 30;
+$line-heights-3: 28;
+$line-heights-4: 24;
+$line-heights-5: 20;
+$line-heights-6: 18;
+$font-weights-inter-0: Semi Bold;
+$font-weights-inter-1: Medium;
+$font-weights-inter-2: Bold;
+$font-weights-inter-3: Regular;
+$font-size-0: 12;
+$font-size-1: 14;
+$font-size-2: 16;
+$font-size-3: 18;
+$font-size-4: 20;
+$font-size-5: 24;
+$font-size-6: 30;
+$letter-spacing-0: 0%;
+$paragraph-spacing-0: 12;
+$paragraph-spacing-1: 14;
+$paragraph-spacing-2: 16;
+$paragraph-spacing-3: 18;
+$paragraph-spacing-4: 20;
+$paragraph-spacing-5: 24;
+$paragraph-spacing-6: 30;
+$text-case-none: none;
+$text-case-capitalize: capitalize;
+$text-decoration-none: none;
+$paragraph-indent-0: 0px;
 $color-text-normal: #344054;
 $color-text-sidebar: #344054;
 $color-text-gray: #667085;
@@ -192,6 +223,7 @@ $color-background-primary-container: #ffeb74;
 $color-background-base-light: #fcfcfd;
 $color-background-base-grey: #f2f4f7;
 $color-background-base-dark: #101828;
+$color-background-base-skyblue: #f5faff;
 $color-background-error: #fee4e2;
 $color-background-link: #d1e9ff;
 $color-background-success: #d1fadf;
@@ -221,6 +253,7 @@ $color-background-button-error-selected: #d92d20;
 $color-background-button-secondary-active: #fcfcfd;
 $color-background-button-secondary-hover: #f5faff;
 $color-background-button-secondary-selected: #d1e9ff;
+$color-background-variant-complementary: #194185;
 $color-shadow: #101828;
 $color-border-base: #98a2b3;
 $color-border-error: #f97066;
