--- a/button/src/button.css
+++ b/button/src/button.css
@@ -41,32 +41,33 @@ button:not(:disabled),
 }
 
 .btn {
-  /* --bs-btn-padding-x: 0.75rem;
-  --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
-  --bs-btn-font-weight: 400;
-  --bs-btn-line-height: 1.5;
-  --bs-btn-color: var(--bs-body-color);
-  --bs-btn-bg: transparent;
-  --bs-btn-border-width: var(--bs-border-width);
-  --bs-btn-border-color: transparent;
-  --bs-btn-border-radius: var(--bs-border-radius);
-  --bs-btn-hover-border-color: transparent;
-  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
-  --bs-btn-disabled-opacity: 0.65;
-  --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-  display: inline-block; */
+  --adr-btn-padding-x: var(--figma-size-button-padding-right-left);
+  --adr-btn-padding-y: var(--figma-size-button-padding-top-bottom);
+  --adr-btn-font-family: ;
+  --adr-btn-font-size: var(--figma-size-font-button-1);
+  --adr-btn-font-weight: 400;
+  --adr-btn-line-height: 1.5;
+  --adr-btn-color: var(--figma-color-text-normal);
+  --adr-btn-bg: transparent;
+  --adr-btn-border-width: var(--adr-border-width);
+  --adr-btn-border-color: transparent;
+  --adr-btn-border-radius: var(--adr-border-radius);
+  --adr-btn-hover-border-color: transparent;
+  --adr-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
+    0 1px 1px rgba(0, 0, 0, 0.075);
+  --adr-btn-disabled-opacity: 0.65;
+  --adr-btn-focus-box-shadow: 0 0 0 0.25rem
+    rgba(var(--adr-btn-focus-shadow-rgb), 0.5);
+  display: inline-block;
   display: flex;
-  padding: var(--figma-size-button-padding-top-bottom)
-    var(--figma-size-button-padding-right-left);
+  padding: var(--adr-btn-padding-y) var(--adr-btn-padding-x);
   gap: var(--figma-size-button-gap);
   font-family: var(--figma-font-button1-font-family);
   font-style: normal;
   font-weight: var(--figma-font-button1-font-weight);
-  font-size: var(--figma-size-font-button-1);
+  font-size: var(--adr-btn-font-size);
   line-height: var(--figma-size-line-height-button1);
-  color: var(--figma-color-text-normal);
+  color: var(--adr-btn-color);
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
