--- a/button/src/button.css
+++ b/button/src/button.css
@@ -3,8 +3,37 @@
   width: inherit;
   flex-wrap: wrap;
 }
+
+.close {
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  opacity: 0.75;
+}
+
+.close:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+
 button {
   border-radius: 0;
+}
+
+button.close {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  -webkit-appearance: none;
 }
 
 button:focus:not(:focus-visible) {
