--- a/modal/src/modal.css
+++ b/modal/src/modal.css
@@ -1,13 +1,19 @@
+.modal-open {
+  overflow: hidden;
+}
+
 .modal {
   --bs-modal-zindex: 1055;
   --bs-modal-width: 500px;
   --bs-modal-padding: 1rem;
   --bs-modal-margin: 0.5rem;
   --bs-modal-color: ;
-  --bs-modal-bg: var(--bs-body-bg);
+  /* --bs-modal-bg: var(--bs-body-bg); */
+  --bs-modal-bg: var(--figma-color-background-base-light);
   --bs-modal-border-color: var(--bs-border-color-translucent);
   --bs-modal-border-width: var(--bs-border-width);
-  --bs-modal-border-radius: var(--bs-border-radius-lg);
+  /* --bs-modal-border-radius: var(--bs-border-radius-lg); */
+  --bs-modal-border-radius: var(--figma-size-radius-small);
   --bs-modal-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   --bs-modal-inner-border-radius: calc(
     var(--bs-border-radius-lg) - (var(--bs-border-width))
@@ -78,6 +84,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  /* "--bs-modal-color ada untuk variasi jika ingin ubah warna teks" */
   color: var(--bs-modal-color);
   pointer-events: auto;
   background-color: var(--bs-modal-bg);
@@ -117,6 +124,7 @@
   border-top-left-radius: var(--bs-modal-inner-border-radius);
   border-top-right-radius: var(--bs-modal-inner-border-radius);
 }
+
 .modal-header .btn-close {
   padding: calc(var(--bs-modal-header-padding-y) * 0.5)
     calc(var(--bs-modal-header-padding-x) * 0.5);
