--- a/button/src/button.css
+++ b/button/src/button.css
@@ -6,7 +6,8 @@
 
 .close {
   float: right;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
+  font-size: 1.2rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
