--- a/tokens/src/styles.css
+++ b/tokens/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
+@import '../../alert/src/alert.css';
 @import '../../accordion/src/accordion.css';
 @import '../../cards/src/cards.css';
 @import '../../breadcrumb/src/breadcrumb.css';
